--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
+/* ------------------------------- Google font ------------------------------ */
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500;600;700;900&family=Overpass:wght@300;400;700;800&display=swap");
+
 .App {
+  font-family: "Jost", "Overpass", sans-serif;
   text-align: center;
 }
 
