readme.MD updated

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,7 +32,7 @@
 }
 
 .footer-logo h2 span {
-  color: #3ec1d5;
+  color: orangered;
 }
 
 .footer-icons ul li {
@@ -74,7 +74,7 @@
 }
 
 .footer-contacts p span {
-  color: #3ec1d5;
+  color: orangered;
   font-weight: 700;
 }
 
