--- a/src/components/Packages/Packages.css
+++ b/src/components/Packages/Packages.css
@@ -1,20 +1,182 @@
 /*--------------------------------------------------------------
-# Review
+# Portfolio
 --------------------------------------------------------------*/
-.reviews-area {
-  background: url("https://i.ibb.co/rdQ1HCF/burj-al-arab-club-suite-living-room-2-16-9-landscape.jpg");
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  background-attachment: fixed;
-  width: 100%;
+.pst-content {
+  padding-left: 10px;
+}
 
+#portfolio-flters {
+  padding: 0;
+  margin: 5px 0 35px 0;
+  list-style: none;
+
+  text-align: center;
+}
+#portfolio-flters li {
+  cursor: pointer;
+  margin: 15px 15px 15px 0;
+  display: inline-block;
+  padding: 8px 24px;
+  font-size: 12px;
+  line-height: 20px;
+  color: #555;
+  border-radius: 60px;
+  text-transform: uppercase;
+  background: #fff;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid #444;
+}
+#portfolio-flters li:hover,
+#portfolio-flters li.filter-active {
+  border-color: #3ec1d5;
+  background: #3ec1d5;
+  color: #fff;
+}
+#portfolio-flters li:last-child {
+  margin-right: 0;
+}
+
+.single-awesome-project {
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+.single-awesome-project:hover .awesome-img > a::after {
+  opacity: 1;
+}
+
+.single-awesome-project:hover .add-actions {
+  opacity: 1;
+  bottom: 0;
+}
+
+.add-actions {
+  background: rgba(0, 0, 0, 0.6) none repeat scroll 0 0;
+  bottom: 30px;
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  overflow: hidden;
+  padding: 10px 15px;
+  position: absolute;
+  transition: all 0.4s ease 0s;
+  width: 100%;
+}
+
+.awesome-img {
+  display: block;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
+.awesome-img > a {
+  display: block;
+  position: relative;
+}
+.awesome-img img {
+  width: 100%;
+  opacity: 0;
+}
+
+.awesome-img > a::after {
+  background: rgba(0, 0, 0, 0.7) none repeat scroll 0 0;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  opacity: 0;
+  transition: 0.4s;
+}
+
+.project-dec {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+.project-dec a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
+.project-dec h4 {
+  margin-bottom: 5px;
+}
+
+.project-dec h4:hover {
+  color: #fff;
+}
+
+.project-dec h4 {
+  color: #ddd;
+  font-size: 24px;
+  margin-top: 45px; /* default: -45px */
+
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 800;
+}
+
+.project-dec span {
+  color: #ddd;
+  font-size: 13px;
+}
+
+.fix {
+  overflow: hidden;
+}
+
+.ready-btn {
+  border: 1px solid #eee;
+  border-radius: 30px;
+  color: #eeefef;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 500;
+  margin-top: 10px;
+  padding: 10px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: all 0.4s ease 0s;
+}
+
+.ready-btn:hover {
+  border: 1px solid #3ec1d5;
+  color: #3ec1d5;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+}
+
+/* small mobile :320px. */
+@media (max-width: 767px) {
+  .portfolio-area {
+    padding-top: 50px;
+  }
+}
+
+/*--------------------------------------------------------------
+# Review
+--------------------------------------------------------------*/
+.reviews-area {
+  min-height: 50vh;
+
+  background-attachment: fixed;
+
+  position: relative;
+
+  overflow-y: hidden;
+}
+
 .tour_info {
-  height: 30vh;
+  height: 51vh;
 }
 
 .work-left-text {
