--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -1,66 +1,40 @@
-.glitch {
-  margin-top: 50px;
-  position: relative;
+.breadcrumb-bg {
+  background-image: url("https://i.ibb.co/4YrRYMR/barca-france.png");
 }
-.glitch::before,
-.glitch::after {
-  content: attr(data-text);
+
+.breadcrumb-text p {
+  color: #f28123;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 7px;
+}
+
+.breadcrumb-text h1 {
+  font-size: 50px;
+  font-weight: 900;
+  color: #fff;
+  margin: 0;
+  margin-top: 20px;
+}
+
+.breadcrumb-section {
+  padding: 150px 0;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  z-index: 1;
+  background-attachment: fixed;
+  padding-top: 200px;
+}
+
+.breadcrumb-section:after {
   position: absolute;
-  top: 0;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
-}
-.glitch::before {
-  /* ... anything needed to make it identical */
-
-  /* variation */
-  left: 2px;
-  text-shadow: -1px 0 red;
-
-  /* important: opaque background masks the original */
-  background: black;
-}
-.glitch::after {
-  /* ... anything needed to make it identical */
-
-  /* variation */
-  left: -2px;
-  text-shadow: -1px 0 blue;
-
-  /* important: opaque background masks the original */
-  background: black;
-}
-.glitch::before {
-  clip: rect(44px, 450px, 56px, 0);
-  /*
-    Essentially a box from 0, 44px
-    to 450px, 56px
-  */
-
-  /* clip-path: inset(); needs how far you want to push in from the edges instead */
-}
-@keyframes noise-anim {
-  0% {
-    clip-path: inset(40% 0 61% 0);
-  }
-  20% {
-    clip-path: inset(92% 0 1% 0);
-  }
-  40% {
-    clip-path: inset(43% 0 1% 0);
-  }
-  60% {
-    clip-path: inset(25% 0 58% 0);
-  }
-  80% {
-    clip-path: inset(54% 0 7% 0);
-  }
-  100% {
-    clip-path: inset(58% 0 43% 0);
-  }
-}
-
-#wrapper {
-  /* display: flex; */
+  content: "";
+  background-color: #07212e;
+  z-index: -1;
+  opacity: 0.8;
 }
